--- a/src/components/ProductComponents/ProductPricing/ProductPricing.css
+++ b/src/components/ProductComponents/ProductPricing/ProductPricing.css
@@ -49,7 +49,11 @@
         justify-content: center;
         align-items: center;
         overflow-x: scroll;
+        -ms-overflow-style: none;
+    }
 
+    .ProductPricing-category-sort::-webkit-scrollbar {
+        display: none;
     }
     
     .ProductPricing-category-sort button {
@@ -295,6 +299,11 @@
         grid-template-rows: repeat(4, 12fr);
         column-gap: 50px;
         row-gap: 10px;
+        -ms-overflow-style: none;
+    }
+
+    .ProductPricing-category-sort::-webkit-scrollbar {
+        display: none;
     }
     
     .ProductPricing-item {
